--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,8 +2,13 @@
     "compilerOptions": {
         "module": "commonjs",
         "strict": true,
-        "removeComments": true,
+        "strictNullChecks": true,
         "preserveConstEnums": true,
-        "sourceMap": true
-    }
+        "sourceMap": true,
+        "esModuleInterop": true,
+        "outDir": "./dist",
+    },
+    "include": [
+        "src/**/*"
+    ],
 }
