--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
         "module": "commonjs",
         "strict": true,
         "strictNullChecks": true,
+        "noImplicitThis": true,
         "preserveConstEnums": true,
         "sourceMap": true,
         "esModuleInterop": true,
