Add tkernel & wolfmqtt path to typescriptc project assuming they are installed in home directory as T-Kernel2.0

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -73,6 +73,8 @@
         "vector": "cpp",
         "*.tcc": "cpp",
         "memory_resource": "cpp",
-        "cinttypes": "cpp"
+        "cinttypes": "cpp",
+        "tkernel.h": "c",
+        "tmonitor.h": "c"
     }
 }
