Change vscode settings.json

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -75,6 +75,7 @@
         "memory_resource": "cpp",
         "cinttypes": "cpp",
         "tkernel.h": "c",
-        "tmonitor.h": "c"
+        "tmonitor.h": "c",
+        "gc.h": "c"
     }
 }
